--- a/DataNormalization.ipynb
+++ b/DataNormalization.ipynb
@@ -190,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "VENV2",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
